Fix header visibility in user view

--- a/static/css/dashboard/base.css
+++ b/static/css/dashboard/base.css
@@ -72,7 +72,6 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   font-size: var(--font-size-3xl);
-  color: #fff !important;
 }
 h2 { font-size: var(--font-size-2xl); }
 h3 { font-size: var(--font-size-xl); }
@@ -83,9 +82,7 @@ p {
   color: var(--text-primary) !important;
 }
 
-h1 + p {
-  color: #fff !important;
-}
+
 
 /* Links */
 a {
